Fix bug overflow

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -43,6 +43,8 @@ code {
 }
 
 #root {
+  position: relative;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
